--- a/css/default.css
+++ b/css/default.css
@@ -136,6 +136,7 @@ p {
 
         width: 28%;
         max-width: 28%;
+        height: 100%;
         max-height: 100%;
 
         margin-left: 5px;
