--- a/css/default.css
+++ b/css/default.css
@@ -103,6 +103,23 @@ p {
     float: left;
 }
 
+.project-image {
+    border-width: 2px;
+    border-style: solid;
+    float: right;
+
+    width: 28%;
+    max-width: 28%;
+    height: 100%;
+    max-height: 100%;
+
+    margin-left: 5px;
+
+    /*background-image: ;*/
+    background-size: contain;
+
+}
+
 .project {
     width: 100%;
     height: 100%;
@@ -128,24 +145,7 @@ p {
         padding-bottom: 0;
     }
 
-
-    .image {
-        border-width: 2px;
-        border-style: solid;
-        float: right;
-
-        width: 28%;
-        max-width: 28%;
-        height: 100%;
-        max-height: 100%;
-
-        margin-left: 5px;
-
-        /*background-image: ;*/
-        background-size: contain;
-
-    }
-
+    /*
     img {
         
 
@@ -156,5 +156,6 @@ p {
         height: auto;
         max-height: min-content;
     }
+        */
 }
 
