--- a/css/default.css
+++ b/css/default.css
@@ -103,23 +103,6 @@ p {
     float: left;
 }
 
-.project-image {
-    border-width: 2px;
-    border-style: solid;
-    float: right;
-
-    width: 28%;
-    max-width: 28%;
-    height: 100%;
-    max-height: 100%;
-
-    margin-left: 5px;
-
-    /*background-image: ;*/
-    background-size: contain;
-
-}
-
 .project {
     width: 100%;
     height: 100%;
@@ -145,7 +128,24 @@ p {
         padding-bottom: 0;
     }
 
-    /*
+
+    .image {
+        border-width: 2px;
+        border-style: solid;
+        float: right;
+
+        width: 28%;
+        max-width: 28%;
+        height: 100%;
+        max-height: 100%;
+
+        margin-left: 5px;
+
+        /*background-image: ;*/
+        background-size: contain;
+
+    }
+
     img {
         
 
@@ -156,6 +156,5 @@ p {
         height: auto;
         max-height: min-content;
     }
-        */
 }
 
