--- a/css/default.css
+++ b/css/default.css
@@ -105,7 +105,7 @@ p {
 
 .project {
     width: 100%;
-    height: 100%;
+    height: min-content;
 
     padding-left: 5px;
     margin-bottom: 5px;
@@ -128,31 +128,19 @@ p {
         padding-bottom: 0;
     }
 
-
-    .image {
+    img {
         border-width: 2px;
         border-style: solid;
-        float: right;
 
+        float: right;
+        
         width: 28%;
         max-width: 28%;
 
-        margin-left: 5px;
-
-        /*background-image: ;*/
-        background-size: contain;
-
-    }
-
-    img {
-        
-
-        
-        
-        
-
         height: auto;
         max-height: min-content;
+        margin-left: 5px;
+
     }
 }
 
