--- a/css/default.css
+++ b/css/default.css
@@ -115,6 +115,7 @@ p {
 
     background-color: rgb(212, 241, 245);
     
+    /*
     h3 {
         margin-top: 2px;
         margin-bottom: 0;
@@ -141,5 +142,6 @@ p {
         margin-left: 5px;
 
     }
+    */
 }
 
