css max height width

--- a/css/default.css
+++ b/css/default.css
@@ -134,10 +134,11 @@ p {
 
         float: right;
         
-        width: 28%;
+        /*width: 28%;*/
         max-width: 28%;
+        max-height: 100%;
 
-        height: auto;
+        /*height: auto;*/
         margin-left: 5px;
 
     }
