--- a/css/default.css
+++ b/css/default.css
@@ -133,6 +133,7 @@ p {
         border-style: solid;
 
         float: right;
+        clear: right;
         
         /*width: 28%;*/
         max-width: 28%;
