--- a/css/default.css
+++ b/css/default.css
@@ -133,7 +133,8 @@ p {
         border-style: solid;
 
         float: right;
-        clear: both;
+        clear: right;
+        overflow-y: hidden;
         
         /*width: 28%;*/
         max-width: 28%;
