--- a/css/default.css
+++ b/css/default.css
@@ -123,7 +123,7 @@ p {
     p {
         text-align: justify;
         text-align: left;
-        margin-right: 30%;
+        /*margin-right: 30%;*/
 
         padding-bottom: 0;
     }
@@ -132,9 +132,10 @@ p {
         border-width: 2px;
         border-style: solid;
 
+        float: top;
         float: right;
         clear: right;
-        overflow-y: hidden;
+        overflow: hidden;
         
         /*width: 28%;*/
         max-width: 28%;
