--- a/css/default.css
+++ b/css/default.css
@@ -138,8 +138,9 @@ p {
         overflow: hidden;
         
         /*width: 28%;*/
-        max-width: 28%;
         max-height: 100%;
+        /*max-width: 28%;*/
+        
 
         /*height: auto;*/
         margin-left: 5px;
