--- a/css/default.css
+++ b/css/default.css
@@ -139,7 +139,7 @@ p {
         
         /*width: 28%;*/
         max-height: 100%;
-        /*max-width: 28%;*/
+        max-width: 28%;
         
 
         /*height: auto;*/
