--- a/css/default.css
+++ b/css/default.css
@@ -53,7 +53,7 @@ p {
         text-decoration: none;
     }
 
-    li btn {
+    li button {
         display: block;
         color: white;
         text-align: center;
@@ -65,7 +65,7 @@ p {
         background-color: black;
     }
 
-    li btn:hover {
+    li button:hover {
         background-color: black;
     }
 
