--- a/css/default.css
+++ b/css/default.css
@@ -54,11 +54,14 @@ p {
     }
 
     li button {
-        display: block;
+        border: none;
+        display: inline-block;
         color: white;
+        background-color: rgb(39, 39, 39);
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
+        cursor: pointer;
     }
     
     li a:hover {
