--- a/css/default.css
+++ b/css/default.css
@@ -38,7 +38,9 @@ p {
     
     li {
         float: left;
-        font-size: 140%;
+        font-size: 130%;
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
     }
 
     li:first-child {
@@ -54,12 +56,14 @@ p {
     }
 
     li button {
+        font-size: 100%;
+        
         border: none;
         display: inline-block;
         color: white;
         background-color: rgb(39, 39, 39);
         text-align: center;
-        padding: 14px 16px;
+        padding: 15px 16px;
         text-decoration: none;
         cursor: pointer;
     }
