--- a/css/default.css
+++ b/css/default.css
@@ -186,11 +186,17 @@ p {
 
 /*contact info popup*/
 .contact {
+    font-size: 120%;
     background-color: aliceblue;
     margin:auto;
+    margin-top:20%;
     padding: 20px;
     border: 1px solid black;
-    width: 80%
+    width: 30%;
+
+    img {
+        
+    }
 
 }
 
