--- a/css/default.css
+++ b/css/default.css
@@ -191,13 +191,16 @@ p {
     margin:auto;
     margin-top:20%;
     padding: 20px;
+    padding-left: 4%;
     border: 1px solid black;
     width: 30%;
+    height: 20%;
 
     img {
-        float: left;
-        max-height: 100px;
-        max-width: 100px;
+        float:left;
+        margin-left: 5%;
+        max-height: 75px;
+        max-width: 75px;
     }
 
 }
@@ -215,4 +218,3 @@ p {
     text-decoration: none;
     cursor: pointer;
 }
-
