--- a/css/default.css
+++ b/css/default.css
@@ -188,7 +188,7 @@ p {
 .contact {
     font-size: 120%;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color:lightpink;
+    background-color: azure;
     margin:auto;
     margin-top:20%;
     padding: 20px;
