--- a/css/default.css
+++ b/css/default.css
@@ -187,6 +187,7 @@ p {
 /*contact info popup*/
 .contact {
     font-size: 120%;
+    font-weight: 500;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: azure;
     margin:auto;
